--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <nav>
           <a class="anchor" href="#bio">Biography</a>
-          <a class="anchor" href="#projects">My Projects</a>
+          <a class="anchor" href="#project">My Projects</a>
           <a class="anchor" href="#hobbies">Hobbies</a>
           <a class="anchor" href="./contact.html">Contact</a>
       </nav>
@@ -34,11 +34,27 @@
           <p><img id="pond" src="resources/images/pond.jpg"> </p>
       </section>
       <!--Projects Section-->
-      <section id="projects" class="gridthree">
-        <div class="box top">Info about project</div>
-        <div class="box pr1">Project 1</div>
-        <div class="box pr2">Project 2</div>
-        <div class="box pr3">Project 3</div>
+      <section id="project">
+        <div class="box top">
+          <p><span class="larger">Projects</span><br><br>I am currently following the course of Full Stack Engineer on Codecademy, below are some examples of the small projects I've done in the previous weeks.</p>
+        </div>
+          <div id="projects" class="gridthree">
+            <div class="overlay">
+              <div class="box pr1">
+                <a href="./mixedmessages.html">Mixed Messages</a>
+              </div>
+            </div>
+            <div class="overlay">
+              <div class="box pr2">
+                <a href="./creditcardchecker.html">Credit Card Checker</a>
+              </div>
+            </div>
+            <div class="overlay">
+              <div class="box pr3">
+                <a href="./dasmoto.html">Das Moto Styling Project</a>
+              </div>
+            </div>
+        </div>
       </section>
       <!--Hobby Section-->
       <section id="hobbies">
